deleted:    README.md 	modified:   index.html 	new file:   styles.css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="header-image">
-        <img src="https://i.ibb.co/0jRL0fV/heart-banner.png" alt="Decoración romántica">
+        <img src="chanekeconpatas.jpg" alt="Decoración romántica">
     </div>
 
-    <img src="https://i.ibb.co/3fxp4hP/butterfly.png" class="butterfly butterfly1" alt="Mariposa">
-    <img src="https://i.ibb.co/3fxp4hP/butterfly.png" class="butterfly butterfly2" alt="Mariposa">
+    <img src="Tutuga.jpg" class="butterfly butterfly1" alt="Mariposa">
+    <img src="Poio.jpg" class="butterfly butterfly2" alt="Mariposa">
     <img src="https://i.ibb.co/3fxp4hP/butterfly.png" class="butterfly butterfly3" alt="Mariposa">
     <img src="https://i.ibb.co/3fxp4hP/butterfly.png" class="butterfly butterfly4" alt="Mariposa">
 
